优化部分jvm文章